frontend/wwwroot/scss/base/interactive_elements.scss
@use '../abstracts/colors' as colors;
@use '../abstracts/placeholders' as *;
@use '../abstracts/variables' as variables;

// Define CSS variable for breakpoint
.fullscreen-overlay {
    width: 100vw;
    height: 100vh;
    overflow: hidden;
    position: fixed;
    top: 0;
    left: 0;
    z-index: 1000;
    // background-color: red;
    display: flex;
    align-items: center;
    justify-content: center;
    background: colors.opacity-set(colors.$primary-dark, 1);
}

// -----------------------
// General
// -----------------------
button {
    @extend %roboto-light;
}

// .overlay__button {}

.overlay__button--close {
    @extend %flex--row--center;
    position: absolute;
    top: 0;
    right: 0;
    font-size: 50px;
    line-height: 0.6em;
    padding: 20px;
    color: colors.$primary-dark;
    background: colors.opacity-set(colors.$primary-main, .5);
}

// -----------------------
// Dropdown
// -----------------------
.dropdown {
    display: inline-block;
    position: relative;
    // z-index: 100;
}

.dropdown.nav--interactive {
    // background: red;
}

.dropdown__button {
    display: flex;
    align-items: center;
    gap: 5px;
    padding: 5px;
}

.dropdown__content {
    // position: fixed;
    // top: 0;
    // left: 0;
    // width: 100vw;
    // height: 100vh;
    // display: flex;
    // align-items: center;
    // justify-content: center;
    opacity: 0;
    visibility: hidden;
    // z-index: 99;
    transition: all linear 0.2s;
    // background: colors.opacity-set(colors.$secondary-hover, 90%);
}

/* For fullscreen mobile */
.dropdown__content-wrapper {
    //background: cyan;
}

.dropdown__content.dropdown__content--visible {
    opacity: 1;
    visibility: visible;
}

.dropdown__content-title {
    padding: 5px;
}

/* Desktop */
@media (min-width: variables.$breakpoint--desktop) {
    .dropdown:hover {

        .dropdown__content {
            opacity: 1;
            visibility: visible;
            // transform: translateY(0);
        }

        .svg--rotate {
            transform: rotate(180deg);
        }
    }

    .svg--rotate {
        transition: all linear 0.2s;
    }

    .dropdown__button {
        // position: relative;
        // z-index: 100;
    }

    .dropdown__content {
        // z-index: 99;
        position: absolute;
        width: unset;
        height: unset;
        //opacity: unset;
        //visibility: unset;
        top: unset;
        overflow-y: hidden;
        overflow-x: visible;
        //max-height: 0;
        min-width: max-content;
        // transform: translateY(-100%);
    }

    .dropdown__content-wrapper {}

    .dropdown__content li {
        list-style-type: none;
        padding: 10px 15px;
    }
}

// -----------------------
// Select
// -----------------------
.select {
    display: inline-block;
    position: relative;
}

.select__button {
    display: flex;
    align-items: center;
    gap: 5px;
    padding: 5px;
}

.select__content {
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    background: pink;
    display: flex;
    align-items: center;
    justify-content: center;
    opacity: 0;
    visibility: hidden;
    z-index: 1000;
    transition: max-height 0.5s linear, opacity 0.2s linear;
}

/* For fullscreen mobile */
.select__content-wrapper {
    background: cyan;
}

.select__content.select__content--visible {
    opacity: 1;
    visibility: visible;
}

.select__content-title {
    padding: 5px;
}

/* Desktop */
@media (min-width: variables.$breakpoint--desktop) {
    .select__content {
        position: absolute;
        width: unset;
        height: unset;
        opacity: unset;
        visibility: unset;
        top: unset;
        overflow-y: hidden;
        overflow-x: visible;
        max-height: 0;
        min-width: max-content;
        transition: max-height 0.5s linear;
    }

    .select:hover .select__content {
        max-height: 500px;
    }


    .select__content-wrapper {}
}

// -----------------------
// Slider
// -----------------------

.slider {
    display: inline-block;
}

.slider__content {
    // position: fixed;
    // width: 100vw;
    // height: 100vh;
    // display: flex;
    // align-items: center;
    // justify-content: center;
    // z-index: 1000;
    // background: colors.opacity-set(colors.$primary-dark, 0.99);
}

/* Directions */

/* Slide in from the left */
.slider__content--left {
    top: 0;
    left: -100vw;
    transition: left .2s linear;
}

.slider__content--left.slider__content--visible {
    left: 0;
}

/* Slide in from the right */
.slider__content--right {
    top: 0;
    left: 100vw;
    transition: left .2s linear;
}

.slider__content--right.slider__content--visible {
    left: 0;
}

/* Slide in from the top */
.slider__content--top {
    top: -100vh;
    left: 0;
    transition: top .2s linear;
}

.slider__content--top.slider__content--visible {
    top: 0;
}

/* Slide in from the bottom */
.slider__content--bottom {
    top: 100vh;
    left: 0;
    transition: top .2s linear;
}

.slider__content--bottom.slider__content--visible {
    top: 0;
}

.slider__content.slider__content--visible {
    left: 0;
}

// -----------------------
// List
// -----------------------
.list {}

.list__header {}

.list__content {}

.list__content--item {
    padding-left: 20px;
    list-style: none;
}

// -----------------------
// Table
// -----------------------
.table-wrapper {
    overflow-x: auto;
}

table {
    border-collapse: collapse;
    margin: 25px 0;
    font-size: 0.9em;
    min-width: 200px;
    width: 100%;
    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
}

table thead tr {
    background-color: colors.$primary-dark;
    color: #ffffff;
    text-align: left;
}

.table__sorting-arrow {
    fill: #ffffff;
}

table th,
table td {
    padding: 10px 10px;
}

table tbody tr {
    border-bottom: 1px solid colors.opacity-set(colors.$primary-dark, 25%);
}

table tbody tr:nth-of-type(even) {
    background-color: colors.opacity-set(colors.$primary-dark, 10%);
}

table tbody tr:last-of-type {
    border-bottom: 2px solid colors.$primary-dark;
}

table tbody tr.active-row {
    background-color: colors.opacity-set(colors.$primary-main, 50%);
}

.table__actions {
    //padding: 5px;
}

.table__actions:hover {
    fill: colors.$secondary-main;
}

// ---------------------------
// Tabbed navigation
// ---------------------------
.tabbed-navigation_tabs {
    display: flex;
}

.tabbed-navigation_tab-button {
    background: colors.$primary-dark;
    color: colors.$primary-main;
}

.tabbed-navigation_tab-button:hover {
    background: colors.$primary-main;
    color: colors.$primary-dark;
}

.tabbed-navigation_tab-button.selected,
.tabbed-navigation_tab-content {
    background: colors.opacity-set(colors.$secondary-light, 20%);
    color: colors.$primary-dark;
}

.tabbed-navigation_tab-button {
    width: unset; // remove 100% width from button
}

.tabbed-navigation_tab-content {
    display: none;
    padding: 30px;
}

.tabbed-navigation_tab-content--visible {
    display: block;
}

// ---------------------------
// Carousel
// ---------------------------
.carousel {
    position: relative;
    width: 100%;
}

.carousel-list {
    display: flex;
    gap: 50px;
    padding: 10px 50px;

    list-style: none;
    overflow-x: scroll;
    scroll-snap-type: x mandatory;
    width: 100%;
    height: 100%;

    /* Hide scrollbar in Firefox */
    scrollbar-width: none;
    /* Hide scrollbar in IE and Edge */
    -ms-overflow-style: none;
}

.carousel-item {
    // flex-grow: 1;
    // width: 80%;
    // width: fit-content;

    background-color: #FFF;

    scroll-snap-align: center;
    @extend %flex--row--center;
    // display: inline-block;
}

.carousel-item__content {
    // display: inline-block;
    height: 100%;

    > * {
        height: 100%;
    }
}

.carousel-button {
    position: absolute;
    top: 50%;

    width: 50px;
    height: 100%;

    transform: translateY(-50%);
    background: white;
}

.carousel-button--previous {
    left: 0;
}

.carousel-button--next {
    right: 0;
}

